--- a/QuickJumpKing/QuickJumpKing.csproj
+++ b/QuickJumpKing/QuickJumpKing.csproj
@@ -9,6 +9,7 @@
 
         <Version>1.0.0</Version>
         <Description>Quick mod for removing the stupid pauses</Description>
+        <PackageLicenseExpression>LGPL-3.0-only</PackageLicenseExpression>
     </PropertyGroup>
 
     <ItemGroup>
